2002-06-06  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/script.cpp: Fixed segfault introduced
          with JS_AddRoot cleanup.

2002-06-05  Braden McDaniel  <braden@endoframe.com>

        * Doxygen love for VrmlScene.

        * Made scene callback IDs enumerants instead of ints.

        * src/openvrml/OpenVRML/script.h: Made
          ScriptNode::ScriptNodeType a friend of ScriptNode.

        * configure.ac: Removed obsolete AC_DEFINEs:
          OPENVRML_MAJOR_VERSION, OPENVRML_MINOR_VERSION,
          OPENVRML_MICRO_VERSION.

        * Moved ProtoNode, ProtoNodeClass definitions and implementation
          to VrmlScene.cpp.

        * Require Autoconf 2.53.

        * Tweaked SpiderMonkey detection macro to work with
          Mozilla 1.0.0.

        * src/openvrml/OpenVRML/script.cpp: Removed vestigal debug
          output from ScriptNode::setEventOut.

        * src/openvrml/OpenVRML/Doc.cpp, src/openvrml/OpenVRML/doc2.hpp:
          std:: correctness fixes.

        * src/openvrml/OpenVRML/VrmlScene.cpp: Removed OPENVRML_SCOPE
          from ProtoNode, ProtoNodeClass; these classes are no longer
          part of the public API.

2002-06-04  Braden McDaniel  <braden@endoframe.com>

        * Made zlib an optional dependency.

2002-05-31  Braden McDaniel  <braden@endoframe.com>

        * "make install" can now install Dogygen-generated documentation
          if the build is configured --with-doxygen (the default).

2002-05-30  Braden McDaniel  <braden@endoframe.com>

        * Fixed usage of JS_AddRoot with the MF* types in the JavaScript
          binding.

2002-05-29  Braden McDaniel  <braden@endoframe.com>

        * Don't install openvrml-gl.pc when building --without-gl.

2002-05-28  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/proto.cpp: Doxygen comments - marked
          docs for ProtoNode::NodeCloneVisitor and
          ProtoNode::RouteCopyVisitor "internal".
